# repeng

./: .gitignore  README.md  justfile  pyproject.toml
docs/: 2405.19597_SVFT.md  2501.17148_axbench_paper_showing_prompting_beats_steering.md  2509.02830v1_SSVD_paper.md  2510.04871v1_trm_paper.md  An Improved Empirical Fisher Approximation for Natural Gradient Descent.md  BiPO_paper.md  ETHER.md  Limitations of the Empirical Fisher Approximation for Natural Gradient Descent.md  PiSS_paper_2404.02948v4.md  axbench_paper.tex  brainstorm_kimi_narrative.md  deleteme_brainstorm_svd.md  loss_geometry.md  making_a_lora_with_coeff.md  neel_nanda_how_to_write_ml_papers.md  peft_adapter_papers.md  readme_for_my_supressed_knowledge_work.md  research_journal_mjc.md  results_journal_mjc.md
nbs/: 03_contrastive_adapter_svft-Uv2.ipynb  04_contrastive_adapter_svft-Uv2.ipynb  eval_last_ckpt.ipynb  eval_model.ipynb  eval_model_noforce.ipynb  eval_models_with_prompting.ipynb  how_to_get_logprobs_from_generation_v1.ipynb  how_to_get_logprobs_from_generation_v2.ipynb  how_to_get_logprobs_from_generation_v3.ipynb  how_to_get_logprobs_from_generation_v4.ipynb  plot_effect_vs_coherence.py  scratch_eval_summary.py  scratch_gen.ipynb  train.py
notebooks/: 02_reasoning_bnb_4bit.ipynb  03_contrastive_adapter-sde road.ipynb  03_contrastive_adapter_delora-side.ipynb  03_contrastive_adapter_dora-sde.ipynb  03_contrastive_adapter_ia3-sde.ipynb  03_contrastive_adapter_ia3_TODO copy.ipynb  03_contrastive_adapter_ia3_sde.py  03_contrastive_adapter_svft-Aspace.ipynb  03_contrastive_adapter_svft-Uv2.ipynb  (+27 more)
(+32 files in other folders)
