[project]
name = "repeng"
version = "0.5.0"
description = "representation engineering / control vectors"
authors = [{ name = "Theia Vogel", email = "theia@vgel.me" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "scikit-learn>=1.4.0",
    "torch>=2.1.2",
    "transformers[torch]>4.51.0",
    "tqdm>=4.66.1",
    "gguf>=0.13.0",
    "baukit",
    "jaxtyping>=0.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.2",
    "ruff>=0.8.3",
]
nbs = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "umap-learn>=0.5.9.post2",
    "jaxtyping>=0.3.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "bitsandbytes>=0.47.0",
    "tabulate>=0.9.0",
    "peft>=0.17.1",
    "datasets>=4.1.1",
    "einops>=0.8.1",
]

[tool.pytest.ini_options]
python_files = ["tests.py"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
